<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Online</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="low">Low</string>
	<string name="mid">Medium</string>
	<string name="high">High</string>
	<string name="video">Video</string>
	<string name="person">Person</string>
	<string name="relate_list">"Related Videos"</string>
	<string name="album_list">"Album list"</string>
	<string name="not_support">Not support!</string>
	<string name="password">PassWord:</string>
	<string name="userid">UserID:</string>
	<string name="Login">Login</string>
	<string name="save_name">Save account</string>
	<string name="show_password">Show PassWord</string>
	<string name="site_login_fail">Login failed, Please check account!</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="seek">Goto</string>
	<string name="confirm">Confirm</string>
	<string name="underline">_</string>
	<string name="time_init">--:--:--/--:--:--</string>
	<string name="colon">:</string>
	<string name="hour">Hour</string>
	<string name="min">Min</string>	
	<string name="sec">Sec</string>
	<string name="pageup">page+</string>
	<string name="pagedown">page-</string>
	<string name="vod">VOD</string>	
	<string name="live">Live</string>	
	<string name="history">History</string>		
	<string name="fav">Favorite</string>	
	<string name="time_format">--/--</string>
	<string name="category1">Category1</string>
	<string name="category2">Category2</string>
	<string name="category3">Category3</string>
	<string name="err_io">Load data failed!</string>
	<string name="err_parse">Parse data failed!</string>
	<string name="err_no_reslut">No result!</string>
	<string name="not_support_down">Not support now!</string>
	<string name="not_support_play">Not support play now!</string>
	<string name="none">None</string>
	<string name="getextendinfo_fail">Load Video Info Fail</string>
	<string name="player_error">Play Error</string>
	<string name="exitapp">Exit The Website?</string>
	<string name="message">Message</string>
	<string name="warning">Warning</string>
	<string name="continue_play">Continue to last play?</string>
	<string name="network_fail">Network connection fail!</string>
	<string name="no_category">No category information!</string>
	<string name="time_input_error">Time input is invaild!</string>
	<string name="hint_exit">Exit</string>
	<string name="hint_category">Category</string>
	<string name="Subtitle">Subtitle</string>
	<string name="audio_track">TRK</string>
	<string name="quality">Quality</string>
	<string name="not_support_resoultion">Not Support This Resolution</string>
	<string name="parse_url_error">Parse URL Error</string>
	<string name="login_fail">Device login fail, please try again!</string>
	<string name="load_webs_fail">Load Website Fail!</string>
	<string name="input_searchContent">Please Input Search Content</string>
	<string name="autoPlay">Auto Play</string>
	<string name="report_bug">Website error, Report Bug?</string>
	<string name="website_maintenance">Under maintenance, Coming soon!</string>
	<string name="report_ok">The matter has been submitted, Please wait!</string>
	<string name="hint_edit">Edit</string>
	<string name="editFavoriteTitle">Edit Favorite Video</string>
	<string name="editVideoBtn1">Delete the selected</string>
	<string name="editVideoBtn2">Delete all</string>
	<string name="editHistoryTitle">Edit History Video</string>
	<string name="editVideoWarning">Are you sure to delete all?</string>
	<string name="favorite_full">Favorite full!</string>
	<string name="exitPlayer">Network DisConnect,Quit Playing</string>
	<string name="init_fail">Initialize website failed!</string>
	<string name="resolution">Resolution</string>
	
	
	<!--  for live player -->
    <string name="IDS_String_Change_Pin_Code">Change Pin Code</string>
    <string name="IDS_String_Old_Password">Old Password</string>
    <string name="IDS_String_New_Password">New Password</string>
	 <string name="blue">Blue</string>
	 <string name="IDS_String_Mon">Mon</string>
    <string name="IDS_String_Tue">Tue</string>
    <string name="IDS_String_Wed">Wed</string>
    <string name="IDS_String_Thu">Thu</string>
    <string name="IDS_String_Fri">Fri</string>
    <string name="IDS_String_Sat">Sat</string>
    <string name="IDS_String_Sun">Sun</string>
    <string name="IDS_String_Pre_Day">Prev Day</string>
    <string name="IDS_String_Next_Day">Next Day</string>
    <string name="fav_add">Fav Add</string>
    <string name="fav_del">Fav Del</string>
    <string name="Parental">Parental</string>
    <string name="ChanList">ChanList</string>
    <string name="livefav">Fav</string>
    <string name="Password">Password</string>
    

</resources>
