<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="900px"
    android:layout_height="414px"
    android:alpha="0.8"
    android:background="@drawable/epg_bg" >

    <!-- Epg Top Info -->

    <TextClock
        android:id="@+id/IDC_TextClock_epg_daily_dateTime"
        android:layout_width="255px"
        android:layout_height="40px"
        android:focusable="false"
        android:format24Hour="dd/MM/yyyy"
        android:gravity="center"
        android:textAlignment="viewStart"
        android:textColor="#ff0000"
        android:textSize="24px" />
    <!-- Epg Daily Content -->

    <ImageView
        android:layout_width="245px"
        android:layout_height="40px"
        android:background="@drawable/epg_title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40px"
        android:layout_marginLeft="245px"
        android:background="@drawable/live_epg_title_line" />

    <LinearLayout
        android:layout_width="645px"
        android:layout_height="40px"
        android:layout_marginStart="255px"
        android:background="@drawable/epg_title_bar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY0"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="true"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Mon"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY1"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Tue"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY2"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Wed"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY3"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Thu"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY4"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Fri"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY5"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Sat"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />

        <TextView
            android:id="@+id/IDC_TextView_epg_DailyMode_DAY6"
            android:layout_width="90px"
            android:layout_height="40px"
            android:background="@drawable/epg_daily_time_background"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/IDS_String_Sun"
            android:textColor="@drawable/epg_daily_time_textcolor"
            android:textSize="24px" />
    </LinearLayout>

    <!--
             <ListView
            android:id="@+id/IDC_ListView_epg_DailyMode_chnList"
            android:layout_width="255px"
            android:layout_height="334px"
            android:layout_marginTop="50px"
            android:divider="#00ffffff"
            android:fadeScrollbars="false"
            android:fastScrollEnabled="false"
            android:focusable="true"
            android:listSelector="#00000000"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@drawable/common_scroll_2"
            android:scrollbarTrackVertical="@drawable/common_scroll_1"
            android:scrollbars="vertical" >
        </ListView>
    -->

    <RelativeLayout
        android:layout_width="255px"
        android:layout_height="334px"
        android:layout_marginTop="42px" >

        <ListView
            android:id="@+id/IDC_ListView_epg_DailyMode_chnList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="#00ffffff"
            android:drawSelectorOnTop="false"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fastScrollEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:listSelector="#00000000"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@drawable/common_scroll_2"
            android:scrollbarTrackVertical="@drawable/common_scroll_1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="640px"
        android:layout_height="334px"
        android:layout_marginStart="260px"
        android:layout_marginTop="42px" >

        <ListView
            android:id="@+id/IDC_ListView_epg_DailyMode_eventList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="#00ffffff"
            android:drawSelectorOnTop="false"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fastScrollEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:listSelector="#00000000"
            android:scrollbarStyle="insideInset"
            android:scrollbarThumbVertical="@drawable/common_scroll_2"
            android:scrollbarTrackVertical="@drawable/common_scroll_1" />
    </RelativeLayout>
    <!-- EPG Guide bar -->

    <LinearLayout
        android:id="@+id/IDC_LinearLayout_HotKey"
        android:layout_width="fill_parent"
        android:layout_height="40px"
        android:layout_marginTop="374px"
        android:background="#ee000000" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="260px"
            android:src="@drawable/hotkey_yellow" />

        <TextView
            android:id="@+id/IDC_TextView_epg_daily_guidebar_prevDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/IDS_String_Pre_Day"
            android:textColor="@color/gray"
            android:textSize="23px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="160px"
            android:src="@drawable/hotkey_blue" />

        <TextView
            android:id="@+id/IDC_TextView_epg_daily_guidebar_nextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:singleLine="true"
            android:text="@string/IDS_String_Next_Day"
            android:textColor="@color/gray"
            android:textSize="23px" />
    </LinearLayout>
    <!-- Guide bar -->

</RelativeLayout>