<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1280px"
    android:layout_height="720px"
    android:background="#00000000" >

    <RelativeLayout
        android:layout_width="540px"
        android:layout_height="340dp"
        android:layout_marginLeft="370px"
        android:layout_marginTop="190px"
        android:background="@drawable/dialog_bg" >

        <RelativeLayout
            android:layout_width="500px"
            android:layout_height="340dp"
            android:layout_marginLeft="20px" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="600px"
                android:layout_height="42dp"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="30px" />

            <Button
                android:id="@+id/login_userid"
                android:layout_width="320px"
                android:layout_height="45px"
                android:layout_alignTop="@+id/userId"
                android:layout_toRightOf="@+id/userId"
                android:background="@drawable/keyboard_text_backgroup"
                android:ems="10"
                android:focusable="true"
                android:gravity="left|center_vertical"
                android:nextFocusDown="@+id/login_password"
                android:paddingLeft="10px"
                android:singleLine="true"
                android:textColor="@drawable/login_textcolor"
                android:textSize="25px" />

            <TextView
                android:id="@+id/userId"
                android:layout_width="130dp"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:gravity="left|center_vertical"
                android:text="@string/userid"
                android:textColor="@color/black"
                android:textSize="25px" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="130px"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/userId"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:gravity="left|center_vertical"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="23px" />

            <Button
                android:id="@+id/login_password"
                android:layout_width="320px"
                android:layout_height="45px"
                android:layout_alignTop="@+id/textView1"
                android:layout_toRightOf="@+id/textView1"
                android:background="@drawable/keyboard_text_backgroup"
                android:ems="10"
                android:focusable="true"
                android:gravity="left|center_vertical"
                android:nextFocusUp="@+id/login_showPwd"
                android:paddingLeft="10px"
                android:singleLine="true"
                android:textColor="@drawable/login_textcolor"
                android:textSize="30px" />

            <CheckBox
                android:id="@+id/login_saveInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="11dp"
                android:paddingLeft="20px"
                android:text="@string/save_name"
                android:textColor="@color/black"
                android:textSize="20px" />

            <Button
                android:id="@+id/login_ok"
                android:layout_width="150px"
                android:layout_height="60px"
                android:layout_below="@+id/login_saveInfo"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/textView1"
                android:background="@drawable/search_button_select"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@drawable/search_button_for_textcolor"
                android:textSize="21px" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>